--- a/.github/workflows/fastscan.yaml
+++ b/.github/workflows/fastscan.yaml
@@ -9,8 +9,12 @@ jobs:
   run-fastscan:
     runs-on: ubuntu-latest
     steps:
-      - name: Print Job ID
-        run: echo ${{ github }} ${{ job }}
+      - name: Dump GitHub context
+        id: github_context_step
+        run: echo '${{ toJSON(github) }}'
+        
+      - name: Dump job context
+        run: echo '${{ toJSON(job) }}'
       
       - name: Checkout code
         uses: actions/checkout@v2
