--- a/.github/workflows/HelloRahul.yml
+++ b/.github/workflows/HelloRahul.yml
@@ -5,4 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
-        run: echo "Hello World!"
+        run: echo "Hello World Parent Workflow!"
+      - name: rahul-test-hello-action
+        uses: jainrahul0311/RahulTestHelloAction@v1
+
