--- a/.github/workflows/HelloRahul.yml
+++ b/.github/workflows/HelloRahul.yml
@@ -6,6 +6,7 @@ jobs:
     steps:
       - name: my-step
         run: echo "Hello World Parent Workflow!"
+      
       - name: rahul-test-hello-action
-        uses: jainrahul0311/RahulTestHelloAction@v1
+        uses: jainrahul0311/RahulTestHelloAction@master
 
