--- a/.github/workflows/HelloRahul.yml
+++ b/.github/workflows/HelloRahul.yml
@@ -8,5 +8,5 @@ jobs:
         run: echo "Hello World Parent Workflow!"
       
       - name: rahul-test-hello-action
-        uses: jainrahul0311/RahulTestHelloAction@master
+        uses: jainrahul0311/RahulTestHelloAction@main
 
