--- a/.github/workflows/fastscan.yaml
+++ b/.github/workflows/fastscan.yaml
@@ -22,7 +22,7 @@ jobs:
          cd ${{ github.workspace }}
           git_folder=$(basename "$(git rev-parse --show-toplevel)") 
           # The git folder name is mapped to the project name
-          docker run -v $(pwd):/fastScan/sourceCode castimaging/fast-scan-java-cli /fastScan/sourceCode -s http://ec2-3-129-126-69.us-east-2.compute.amazonaws.com:80 -n $git_folder
+          docker run -v $(pwd):/fastScan/sourceCode castimaging/fast-scan-java-cli /fastScan/sourceCode -s http://ec2-3-129-126-69.us-east-2.compute.amazonaws.com/api/scan -n $git_folder
           
 
           
